# researchiq

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  logging.py
backend/tests/: conftest.py  test_health.py
docs/adr/: 001-llm-provider.md  002-vector-database.md  003-agent-framework.md
docs/setup/: README.md
frontend/: Dockerfile  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
infra/docker/: postgres-init.sql
infra/nginx/: nginx.conf
scripts/: setup_dev.sh
