[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "researchiq-backend"
version = "0.1.0"
description = "ResearchIQ backend API and agent orchestration system"
requires-python = ">=3.11"

dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "python-multipart==0.0.12",
    "sqlalchemy[asyncio]==2.0.35",
    "alembic==1.13.3",
    "asyncpg==0.29.0",
    "psycopg2-binary==2.9.9",
    "redis==5.1.0",
    "celery[redis]==5.4.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "httpx==0.27.2",
    "aiohttp==3.10.5",
    "anthropic==0.34.2",
    "langchain==0.3.1",
    "langchain-anthropic==0.2.1",
    "langchain-community==0.3.1",
    "crewai==0.63.6",
    "openai==1.51.0",
    "qdrant-client==1.11.3",
    "sentence-transformers==3.1.1",
    "pymupdf==1.24.11",
    "python-docx==1.1.2",
    "python-dotenv==1.0.1",
    "structlog==24.4.0",
    "tenacity==9.0.0",
    "tiktoken==0.7.0",
    "reportlab==4.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "httpx==0.27.2",
    "factory-boy==3.3.1",
    "faker==30.3.0",
    "ruff==0.6.9",
    "black==24.10.0",
    "isort==5.13.2",
    "mypy==1.11.2",
    "pre-commit==4.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
